# plat

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  mise.toml  plat-hs-spec-v0.5.md  plat-hs-spec-v0.6.md  plat-hs.cabal  plat.cabal
crates/plat-contract/: Cargo.toml
crates/plat-contract/src/: lib.rs  main.rs
crates/plat-contract/tests/: golden.rs
crates/plat-deprules/: Cargo.toml
crates/plat-deprules/src/: lib.rs  main.rs
crates/plat-deprules/tests/: golden.rs
crates/plat-doc/: Cargo.toml
crates/plat-doc/src/: dsm.rs  lib.rs  main.rs  markdown.rs  mermaid.rs
crates/plat-manifest/: Cargo.toml
crates/plat-manifest/src/: lang.rs  lib.rs  manifest.rs  naming.rs  typemap.rs
crates/plat-manifest/tests/: golden.rs
crates/plat-repl/: Cargo.toml
crates/plat-repl/src/: main.rs
crates/plat-skeleton/: Cargo.toml
crates/plat-skeleton/src/: lib.rs  main.rs
crates/plat-skeleton/tests/: golden.rs
crates/plat-verify/: Cargo.toml
crates/plat-verify/src/: cache.rs  config.rs  contracts.rs  init.rs  lsp.rs  main.rs  suggest.rs
crates/plat-verify/src/check/: compose.rs  drift.rs  existence.rs  import_graph.rs  layer_deps.rs  mod.rs  naming.rs  relation.rs  structure.rs
crates/plat-verify/src/extract/: go.rs  mod.rs  rust.rs  typescript.rs
crates/plat-verify/src/report/: json.rs  lsp.rs  mod.rs  text.rs
crates/plat-verify/tests/: integration_cross_language.rs  integration_go.rs  integration_rust.rs  integration_typescript.rs
docs/: architecture.md  critical-review.md  extensions.md  improvement-plan.md  plat-verify-spec.md  roadmap.md  spec-v0.6.md  tooling-direction.md  validation-rules.md
docs/formal/: README.md  algebra.md  syntax.md  validation.md
docs/spec/: README.md  algebra.md  ast.md  builder.md  constraint.md  extensions.md  manifest.md  relation.md  type-system.md  validation.md
editors/vscode/: README.md  package.json
editors/vscode/src/: extension.ts
examples/: GoCleanArch.hs  RustCqrsEs.hs  TsHexagonal.hs
examples/cross-language/: manifest.json  plat-verify.toml
examples/cross-language/go-api/domain/: order.go
examples/cross-language/go-api/port/: repository.go
examples/cross-language/ts-web/adapter/: http-order-repo.ts
examples/cross-language/ts-web/domain/: order.ts
examples/cross-language/ts-web/port/: repository.ts
examples/cross-language/ts-web/usecase/: place-order.ts
examples/go-clean-arch/: GoCleanArch.hs  main.go  plat-verify.toml
examples/go-clean-arch/Arch/: Catalog.hs  Customer.hs  Order.hs  Payment.hs  Shared.hs
examples/go-clean-arch/architecture/: Catalog.hs  Customer.hs  Main.hs  Order.hs  Payment.hs  Shared.hs
examples/go-clean-arch/domain/: address.go  category.go  customer.go  money.go  order.go  order_item.go  order_status.go  payment_record.go  product.go
examples/go-clean-arch/port/: customer.go  inventory.go  notifier.go  payment.go  product.go  repository.go
examples/go-clean-arch/usecase/: cancel_order.go  create_customer.go  create_product.go  get_customer.go  get_order.go  get_product.go  list_orders.go  place_order.go  search_products.go  update_customer_address.go
examples/go-feature-sliced/: GoFeatureSliced.hs  go.mod  main.go  manifest.json  plat-verify.toml
examples/go-feature-sliced/Arch/: Catalog.hs  Order.hs  Payment.hs  Shared.hs
examples/go-feature-sliced/architecture/: Catalog.hs  Main.hs  Order.hs  Payment.hs  Shared.hs
examples/go-feature-sliced/catalog/: catalog.go
examples/go-feature-sliced/order/: order.go
examples/go-feature-sliced/payment/: payment.go
examples/poc-roundtrip/: manifest.json  plat-verify.toml
examples/poc-roundtrip/domain/: task.go
examples/poc-roundtrip/infra/: http_handler.go  log_notifier.go  sqlite_repo.go
examples/poc-roundtrip/port/: notifier.go  task_repo.go
examples/poc-roundtrip/usecase/: create_task.go  list_tasks.go
examples/rust-cqrs-es/: Cargo.toml  RustCqrsEs.hs
examples/rust-cqrs-es/Arch/: Command.hs  Domain.hs  Flow.hs  Infra.hs  Layers.hs  Port.hs  Query.hs
examples/rust-cqrs-es/architecture/: Command.hs  Domain.hs  Flow.hs  Infra.hs  Layers.hs  Main.hs  Port.hs  Query.hs
examples/rust-cqrs-es/src/: main.rs
examples/rust-cqrs-es/src/command/: mod.rs  (+7 more)
examples/ts-hexagonal/: TsHexagonal.hs  package-lock.json  package.json
examples/ts-hexagonal/Arch/: Delivery.hs  Domain.hs  Layers.hs  Notification.hs  Preference.hs  Schedule.hs
examples/ts-hexagonal/architecture/: Delivery.hs  Domain.hs  Layers.hs  Main.hs  Notification.hs  Preference.hs  Schedule.hs
examples/ts-hexagonal/src/: main.ts
hs/src/Plat/: Core.hs
src-hs/Plat/: Check.hs  Core.hs
src-hs/Plat/Check/: Class.hs  Metrics.hs  Presets.hs  Rules.hs
src-hs/Plat/Core/: Algebra.hs  Builder.hs  Constraint.hs  Meta.hs  Relation.hs  TypeExpr.hs  Types.hs
src-hs/Plat/Ext/: CQRS.hs  CleanArch.hs  DBC.hs  DDD.hs  Events.hs  Flow.hs  Http.hs  Modules.hs  MultiService.hs
src-hs/Plat/Generate/: Mermaid.hs
src-hs/Plat/Verify/: DepRules.hs  Manifest.hs
src-rs/: config.rs  naming.rs
src-rs/check/: compose.rs  drift.rs  existence.rs  structure.rs
src-rs/report/: json.rs
src/Plat/: Check.hs  Core.hs
src/Plat/Check/: Class.hs  Rules.hs
src/Plat/Core/: Builder.hs  Types.hs
src/Plat/Ext/: CQRS.hs  CleanArch.hs  DBC.hs  DDD.hs  Events.hs  Flow.hs  Http.hs  Modules.hs
src/Plat/Generate/: Mermaid.hs
src/Plat/Verify/: DepRules.hs
test/: Main.hs
test-hs/: Main.hs
test/golden/: manifest.json
test/hs/: Main.hs
test/hs/Test/: Algebra.hs  Constraint.hs  Core.hs  Evidence.hs  Ext.hs  Fixtures.hs  Harness.hs  Manifest.hs  Relation.hs
test/rs/: integration_go.rs  integration_rust.rs  integration_typescript.rs
tests/: integration_go.rs
tests/fixtures/rust-clean-arch/: manifest.json
tests/fixtures/ts-hexagonal/: manifest.json
verify/: Cargo.toml
verify/src/: cache.rs  config.rs  main.rs  manifest.rs  naming.rs  typemap.rs
verify/src/check/: drift.rs  layer_deps.rs  mod.rs  relation.rs  structure.rs
verify/src/extract/: go.rs  mod.rs  rust.rs  typescript.rs
verify/tests/: integration_rust.rs  integration_typescript.rs
(+136 files in other folders)
