[package]
name = "plat-verify"
version = "0.1.0"
edition = "2021"
description = "Architecture conformance verification via tree-sitter"

[[bin]]
name = "plat-verify"
path = "src-rs/main.rs"

[dependencies]
tree-sitter = "0.24"
tree-sitter-go = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-rust = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
walkdir = "2"
