cabal-version: 3.0
name:          plat
version:       0.6.0
synopsis:      Architecture as Code — eDSL, generation, verification
license:       MIT
build-type:    Simple

library
  exposed-modules:
    Plat.Core
    Plat.Core.Types
    Plat.Core.TypeExpr
    Plat.Core.Builder
    Plat.Core.Meta
    Plat.Check
    Plat.Check.Class
    Plat.Check.Rules
    Plat.Generate.Mermaid
    Plat.Generate.Markdown
    Plat.Ext.DDD
    Plat.Ext.CQRS
    Plat.Ext.CleanArch
    Plat.Ext.Http
    Plat.Ext.DBC
    Plat.Ext.Flow
    Plat.Ext.Events
    Plat.Ext.Modules
    Plat.Target.Go
    Plat.Target.TypeScript
    Plat.Target.Rust
    Plat.Verify.Manifest
    Plat.Verify.DepRules
  build-depends:
    , base       >= 4.18 && < 5
    , containers >= 0.6
    , directory  >= 1.3
    , text       >= 2.0
  hs-source-dirs: hs/src
  default-language: GHC2024
  default-extensions:
    OverloadedStrings
  ghc-options: -Wall

executable example-go-clean-arch
  main-is:          GoCleanArch.hs
  hs-source-dirs:   examples/go-clean-arch
  other-modules:
    Arch.Shared
    Arch.Order
    Arch.Customer
    Arch.Catalog
    Arch.Payment
  build-depends:
    , base       >= 4.18 && < 5
    , plat
    , text       >= 2.0
    , directory  >= 1.3
    , filepath   >= 1.4
  default-language: GHC2024
  default-extensions:
    OverloadedStrings
  ghc-options: -Wall

executable example-ts-hexagonal
  main-is:          TsHexagonal.hs
  hs-source-dirs:   examples/ts-hexagonal
  other-modules:
    Arch.Layers
    Arch.Domain
    Arch.Notification
    Arch.Schedule
    Arch.Preference
    Arch.Delivery
  build-depends:
    , base       >= 4.18 && < 5
    , plat
    , text       >= 2.0
    , directory  >= 1.3
    , filepath   >= 1.4
  default-language: GHC2024
  default-extensions:
    OverloadedStrings
  ghc-options: -Wall

executable example-rust-cqrs-es
  main-is:          RustCqrsEs.hs
  other-modules:
    Arch.Layers
    Arch.Domain
    Arch.Port
    Arch.Command
    Arch.Query
    Arch.Flow
    Arch.Infra
  hs-source-dirs:   examples/rust-cqrs-es
  build-depends:
    , base       >= 4.18 && < 5
    , plat
    , text       >= 2.0
    , directory  >= 1.3
    , filepath   >= 1.4
  default-language: GHC2024
  default-extensions:
    OverloadedStrings
  ghc-options: -Wall

executable example-go-feature-sliced
  main-is:          GoFeatureSliced.hs
  hs-source-dirs:   examples/go-feature-sliced
  other-modules:
    Arch.Shared
    Arch.Order
    Arch.Catalog
    Arch.Payment
  build-depends:
    , base       >= 4.18 && < 5
    , plat
    , text       >= 2.0
    , directory  >= 1.3
    , filepath   >= 1.4
  default-language: GHC2024
  default-extensions:
    OverloadedStrings
  ghc-options: -Wall

test-suite plat-test
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   hs/test
  build-depends:
    , base       >= 4.18 && < 5
    , plat
    , text       >= 2.0
    , containers >= 0.6
  default-language: GHC2024
  default-extensions:
    OverloadedStrings
  ghc-options: -Wall
