cabal-version: 3.0
name:          plat
version:       0.6.0
synopsis:      Architecture as Code — eDSL, generation, verification
license:       MIT
build-type:    Simple

library
  exposed-modules:
    Plat.Core
    Plat.Core.Types
    Plat.Core.TypeExpr
    Plat.Core.Builder
    Plat.Core.Algebra
    Plat.Core.Constraint
    Plat.Core.Relation
    Plat.Core.Meta
    Plat.Check
    Plat.Check.Class
    Plat.Check.Metrics
    Plat.Check.Presets
    Plat.Check.Rules
    Plat.Ext.DDD
    Plat.Ext.CQRS
    Plat.Ext.CleanArch
    Plat.Ext.Http
    Plat.Ext.DBC
    Plat.Ext.Flow
    Plat.Ext.Events
    Plat.Ext.Modules
    Plat.Ext.MultiService
    Plat.Verify.Manifest
  build-depends:
    , aeson        >= 2.0
    , aeson-pretty >= 0.8
    , base         >= 4.18 && < 5
    , containers   >= 0.6
    , directory    >= 1.3
    , text         >= 2.0
  hs-source-dirs: src-hs
  default-language: GHC2024
  default-extensions:
    OverloadedStrings
  ghc-options: -Wall

executable example-go-clean-arch
  main-is:          Main.hs
  hs-source-dirs:   examples/go-clean-arch/architecture
  other-modules:
    Shared
    Order
    Customer
    Catalog
    Payment
  build-depends:
    , base       >= 4.18 && < 5
    , plat
    , text       >= 2.0
    , directory  >= 1.3
    , filepath   >= 1.4
  default-language: GHC2024
  default-extensions:
    OverloadedStrings
  ghc-options: -Wall

executable example-ts-hexagonal
  main-is:          Main.hs
  hs-source-dirs:   examples/ts-hexagonal/architecture
  other-modules:
    Layers
    Domain
    Notification
    Schedule
    Preference
    Delivery
  build-depends:
    , base       >= 4.18 && < 5
    , plat
    , text       >= 2.0
    , directory  >= 1.3
    , filepath   >= 1.4
  default-language: GHC2024
  default-extensions:
    OverloadedStrings
  ghc-options: -Wall

executable example-rust-cqrs-es
  main-is:          Main.hs
  other-modules:
    Layers
    Domain
    Port
    Command
    Query
    Flow
    Infra
  hs-source-dirs:   examples/rust-cqrs-es/architecture
  build-depends:
    , base       >= 4.18 && < 5
    , plat
    , text       >= 2.0
    , directory  >= 1.3
    , filepath   >= 1.4
  default-language: GHC2024
  default-extensions:
    OverloadedStrings
  ghc-options: -Wall

executable example-go-feature-sliced
  main-is:          Main.hs
  hs-source-dirs:   examples/go-feature-sliced/architecture
  other-modules:
    Shared
    Order
    Catalog
    Payment
  build-depends:
    , base       >= 4.18 && < 5
    , plat
    , text       >= 2.0
    , directory  >= 1.3
    , filepath   >= 1.4
  default-language: GHC2024
  default-extensions:
    OverloadedStrings
  ghc-options: -Wall

test-suite plat-test
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   test/hs
  other-modules:
    Test.Harness
    Test.Fixtures
    Test.Core
    Test.Ext
    Test.Constraint
    Test.Relation
    Test.Algebra
    Test.Evidence
    Test.Manifest
  build-depends:
    , base       >= 4.18 && < 5
    , plat
    , text       >= 2.0
    , containers >= 0.6
    , directory  >= 1.3
  default-language: GHC2024
  default-extensions:
    OverloadedStrings
  ghc-options: -Wall
