[package]
name = "plat-contract"
version = "0.1.0"
edition = "2021"
description = "Generate contract test skeletons from plat architecture manifest"

[[bin]]
name = "plat-contract"

[dependencies]
plat-manifest = { path = "../plat-manifest" }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
