[package]
name = "plat-deprules"
version = "0.1.0"
edition = "2021"
description = "Generate linter dependency rules from plat architecture manifest"

[[bin]]
name = "plat-deprules"

[dependencies]
plat-manifest = { path = "../plat-manifest" }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
